# abstracts-explorer

./: .dockerignore  .env.docker  .env.example  .env.tests  .gitignore  3D_CLUSTERING_FEATURE.md  DATA_MIGRATION.md  DOCKER.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MULTI_DATABASE_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SCREENSHOT_MOCKUP.txt  SECURITY_SUMMARY.md  VISUAL_GUIDE_3D.md  demo_search_with_authors.py  docker-compose.letsencrypt.yml  docker-compose.yml  ieeevis_2025.json  ml4ps_2025.json  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test_abstract_fix.html  test_json_feature.py
.githooks/: README.md  post-checkout  post-merge  pre-commit
caddy/: Caddyfile
changelog/: 001_SUMMARY.md  009_FINAL_STATUS.md  044_CHAT_RESPONSE_FIX.md  054_CLEAN_PACKAGE_LOCK.md  062_DATA_DIR_CONFIGURATION.md  066_E2E_TESTS.md  067_FIREFOX_E2E_SUPPORT.md  072_MULTIPROCESSING_PATH_FIX.md  079_ABSTRACT_DUPLICATION_FIX.md  081_QUERY_REWRITING_SUMMARY.md  082_REWRITTEN_QUERY_DISPLAY_SUMMARY.md  083_INTERESTING_PAPERS_REWRITTEN_QUERY_SUMMARY.md  084_POSTER_IMAGE_DOWNLOAD_FIX.md  085_PARALLEL_DOWNLOAD.md  094_JSON_IMPORT_EXPORT_TESTS_FIXED.md  097_PLUGIN_SYSTEM_INTEGRATION.md  098_LIGHTWEIGHT_PLUGIN_API.md  100_ML4PS_LIGHTWEIGHT_CONVERSION.md  101_ML4PS_PLUGIN_TESTS.md  102_LIGHTWEIGHT_API_AWARD_FIELD.md  103_PYDANTIC_MODELS_REFACTORING.md  104_CODE_ORGANIZATION_REFACTORING.md  105_PLUGIN_FRAMEWORK_SEPARATION.md  106_GITHUB_INSTRUCTIONS_MIGRATION.md  107_PLUGIN_YEAR_CONFERENCE_FIELDS.md  109_UV_MIGRATION.md  110_GIT_HOOKS_VENDOR_AUTO_UPDATE.md  112_ICML_PLUGIN_IMPLEMENTATION.md  113_WEB_UI_DOWNLOAD_UPDATE_FEATURE.md  124_EMBEDDING_MODEL_CHANGE_HANDLING.md  125_CI_SETUP_SCRIPT.md  126_WEB_INTEGRATION_TEST_TIMEOUT_FIX.md  39_TEST_CODE_DEDUPLICATION.md  47_MARKDOWN_SUPPORT.md  53_LOCAL_VENDOR_FILES.md  55_GITIGNORE_VENDOR_FILES.md  56_INSTALLATION_DOCS_UPDATE.md  58_E2E_DRIVER_OPTIMIZATION.md  59_CHAT_E2E_TESTS.md  71_CONFIG_TEST_TEARDOWN_FIX.md  (+8 more)
docs/: .gitignore  CHAT_E2E_TESTS.md  E2E_DRIVER_OPTIMIZATION.md  E2E_TESTING.md  README.md  TEST_CONSOLIDATION_PLAN.md  architecture.md  branching_strategy.md  chat_example.md  cli_reference.md  conf.py  configuration.md  contributing.md  docker.md  index.md  installation.md  mcp_integration_notes.md  mcp_server.md  plugins.md  plugins_quick_reference.md  refactoring_plan.md  registry.md  usage.md  vendor-auto-update.md  web_ui.md
examples/: README.md  add_missing_metadata.py  check_e2e_browsers.py  embeddings_demo.py  rag_chat_demo.py  rag_with_mcp_tools.py
nginx/: nginx.conf  nginx.letsencrypt.conf  nginx.quadlet.conf
scripts/: backfill_paper_urls.py  extract_subset.py  install-podman.sh  migrate-to-podman.sh  migrate_clustering_cache.py  migrate_to_lightweight_schema.py  purge_empty_abstracts.py  update-podman.sh  update_embedding_model_metadata.py
systemd/: abstracts-explorer-letsencrypt-podman.service  abstracts-explorer-letsencrypt.service  abstracts-explorer-podman.service  abstracts-explorer.env  abstracts-explorer.service
tests/: conftest.py  helpers.py  test_authors.py  test_chromadb_metadata.py  test_cli.py  test_cli_database_url.py  test_cli_paper_db.py  test_clustering.py  test_config.py  test_database.py  test_downloader.py  (+33 more)
(+159 files in other folders)
